substrate/frame/support/test/tests/pallet_ui/call_invalid_attr.stderr
error: expected `weight` or `call_index`
  --> tests/pallet_ui/call_invalid_attr.rs:31:13
   |
31 |         #[pallet::weird_attr]
   |                   ^^^^^^^^^^
